--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,13 +3,14 @@ $color-black: #000000;
 $color-white: #ffffff;
 $color-grey-bg: #eeeeee;
 $color-grey-numbers: #d7d7d7;
-$color-grey-text: #9a999a;
-$color-grey-dark: #aaaaaa;
+$color-grey-text: #999;
+$color-grey-border: #d9dce0;
+$color-grey-dark: #666666;
 $color-red: #eb3324;
 $color-yellow: #fad84a;
 
 // CUSTOM
-$color-primary: #448aff;
+$color-primary: #4ea3f6;
 $color-primary-light: #83b9ff;
 $color-primary-dark: #005ecb;
 $color-secondary: #ff5252;
@@ -27,6 +28,10 @@ $font-demo: 'Karla';
 $font-family-primary: 'Lato';
 $font-family-secondary: 'Anton';
 $default-font-size: 1.6rem;
+
+// FONT SIZES
+$font-weight-small: 300;
+$font-weight-medium: 400;
 
 // custom Font usage example:
 @font-face {
