--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,500&display=swap');
+
 .heading {
   font-family: $font-family-secondary;
   margin: 8px 0;
@@ -13,4 +15,8 @@
   font-family: $font-family-primary;
   font-size: 2rem;
   color: $color-black;
+}
+
+.sub-type {
+  font-weight: 300;
 }
