--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
 $color-black: #000000;
 $color-white: #ffffff;
-$color-grey-bg: #eeeeee;
+$color-grey-bg: #f4f4f5;
 $color-grey-numbers: #d7d7d7;
 $color-grey-text: #999;
 $color-grey-border: #d9dce0;
@@ -34,10 +34,10 @@ $font-weight-small: 300;
 $font-weight-medium: 400;
 
 // custom Font usage example:
-@font-face {
-  font-family: $font-demo;
-  // these assets are relative to main.scss
-  src: url('../assets/fonts/karla.ttf') format('ttf');
-  font-weight: 600;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: $font-demo;
+//   // these assets are relative to main.scss
+//   src: url('../assets/fonts/karla.ttf') format('ttf');
+//   font-weight: 600;
+//   font-style: normal;
+// }
