--- a/src/app/components/country-line/index.scss
+++ b/src/app/components/country-line/index.scss
@@ -4,7 +4,7 @@
     display: flex;
     font-size: 18px;
     font-weight: 300;
-    padding: 20px;
+    padding: 14px 14px 13px;
     cursor: pointer;
 
     &:hover {
@@ -14,14 +14,26 @@
     .flag {
         order: 0;
         flex: 0 1 auto;
+
+        font-size: $font-size-emoji;
+        font-style: normal;
     }
     .name {
         order: 1;
         flex: 1 1 auto;
-        padding-left: 10px;
+        padding-left: 34px;
+        line-height: 26px;
+        font-size: $font-size-medium-plus;
+        letter-spacing: 0.2px;
     }
     .prefix {
         order: 2;
         flex: 0 1 auto;
+
+        font-size: $font-size-medium;
+        line-height: 24px;
+        padding-right: 2px;
+        letter-spacing: 0.75px;
+        color: $color-grey-numbers;
     }
 }
