--- a/src/app/pages/login/index.scss
+++ b/src/app/pages/login/index.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 120px;
+    margin-top: 108px;
 
     h1 {
         margin-top: 45px;
@@ -12,10 +12,12 @@
     }
 
     p {
+        margin-top: 14px;
         font-size: 16px;
         max-width: 245px;
         color: #787d80;
-        line-height: 1.3;
+        line-height: 21px;
+        letter-spacing: 0.1px;
         text-align: center;
     }
 
