--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-yellow: #fad84a;
 
 // CUSTOM
 $color-primary: #4ea4f6;
+$color-primary-hover: #4998e2;
 $color-primary-light: #83b9ff;
 $color-primary-dark: #005ecb;
 $color-secondary: #ff5252;
