--- a/src/app/pages/login/login-form.scss
+++ b/src/app/pages/login/login-form.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/abstracts/variables';
 
-.login_page {
+.login_form {
     display: flex;
     align-items: center;
     flex-direction: column;
