--- a/src/app/pages/login/index.scss
+++ b/src/app/pages/login/index.scss
@@ -1,10 +1,13 @@
 @import '../../../styles/abstracts/variables';
 
-.login_form {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.login_page {
     margin-top: 108px;
+
+    [class*=_form] {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
 
     h1 {
         margin-top: 45px;
@@ -12,7 +15,6 @@
         font-size: 32px;
         font-weight: 400;
     }
-
     p {
         margin-top: 14px;
         font-size: 16px;
@@ -22,14 +24,12 @@
         letter-spacing: 0.1px;
         text-align: center;
     }
-
     .logo {
         background: url('../../../assets/images/logo.svg');
         background-repeat: no-repeat;
         height: 160px;
         width: 160px;
     }
-
     form {
         width: 360px;
         margin-top: 34px;
